src/app/app.component.scss
@import "../variables.scss";

.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 16px;
  top: 0;
  position: sticky;
  box-shadow: 0 8px 16px $shadow;
  background-color: $primary;
  z-index: 1;

  &__toggleMenuButton {
    display: none;

    @media (max-width: 768px) {
      display: flex;
      align-items: center;
      column-gap: 16px;
      border: none;
      background: none;
      color: $light;
      cursor: pointer;
      font-size: 1rem;
      font-weight: 700;
    }
  }

  &__navBar {
    &__list {
      display: flex;
      column-gap: 24px;
      list-style: none;

      &__item {
        &__link {
          display: flex;
          align-items: center;
          column-gap: 8px;

          color: $tertiary;
          font-weight: 700;
          transition: color .2s;

          &:hover, &Active {
            color: $light;
          }
        }
      }
    }

    @media (max-width: 768px) {
      display: none;
    }
  }

  &__logOutLink {
    display: flex;
    align-items: center;
    column-gap: 8px;
    padding: 4px 8px;
    border-radius: 4px;
    background-color: scale-color($error, $alpha: -50%);
    color: $light;
    font-size: .75rem;
    transition: background-color .2s;

    &:hover {
      background-color: $error;
    }

    &__icon {
      font-size: .75rem;
    }

    @media (max-width: 768px) {
      display: none;
    }
  }
}

.drawer {
  display: none;

  @media (max-width: 768px) {
    display: block;

    &__list {
      display: flex;
      flex-direction: column;
      margin-top: 16px;
      list-style: none;

      &__item {
        &__link {
          display: flex;
          align-items: center;
          column-gap: 8px;
          padding: 8px 16px;
          color: $tertiary;
          transition: color .2s;

          &:hover, &Active {
            color: $primary;
          }
        }
      }
    }

    &__logOutLink {
      display: inline-flex;
      align-items: center;
      column-gap: 8px;
      margin: 8px 16px;
      padding: 4px 8px;
      border-radius: 4px;
      background-color: $error;
      color: $light;
      font-size: .75rem;
      transition: background-color .2s;

      &:hover {
        background-color: scale-color($error, $alpha: -50%);
      }

      &__icon {
        font-size: .75rem;
      }
    }
  }
}

.main {
  padding: 16px 0 64px 0;
  background-color: $light;
  height: 80vh;

  &Login {
    padding: 0;
    background-image: url("/assets/login/backgroundBody.svg");
    background-size: cover;
    background-position: center;
  }
}

.footer {
  padding: 32px 0;
  position: relative;
  background-color: $primary;

  &__copyright {
    margin-bottom: 8px;
    color: $tertiary;
    font-size: .75rem;
  }

  &__authors {
    color: $tertiary;
    font-size: .75rem;
    font-style: italic;

    a {
      color: inherit;
      text-decoration: underline;
      text-underline-offset: 2px;
    }
  }
}

